--- a/gestor_tareas/tareas/templates/detalle_tarea.html
+++ b/gestor_tareas/tareas/templates/detalle_tarea.html
@@ -27,6 +27,7 @@
                 </p>
             </div>
             
+            <!-- Indicador de estado de la tarea -->
             <div class="mb-3">
                 <h5 class="text-muted">Estado</h5>
                 <p>
