--- a/gestor_tareas/tareas/templates/register.html
+++ b/gestor_tareas/tareas/templates/register.html
@@ -17,6 +17,7 @@
                         {% endfor %}
                     {% endif %}
                     
+                    <!-- Formulario de registro -->
                     <form class="form-signin" method="POST">
                         {% csrf_token %}
                         {{ form.as_p }}
