se hacen ajustes de media queries y diseño responsivo

--- a/gestor_tareas/tareas/templates/agregar_tarea.html
+++ b/gestor_tareas/tareas/templates/agregar_tarea.html
@@ -21,7 +21,7 @@
                         </div>
                         <div class="mb-3">
                             <label for="fecha_vencimiento" class="form-label">Fecha de Vencimiento</label>
-                            <input type="date" class="form-control" id="fecha_vencimiento" name="fecha_vencimiento" required>
+                            <input type="date" class="form-control" id="fecha_vencimiento" name="fecha_vencimiento" required style="appearance: auto;">
                         </div>
 
                         <div class="d-grid gap-2">
